@@ -1,5 +1,6 @@
 package com.espaciosdeportivos.service.impl;
 
+import com.espaciosdeportivos.dto.MacrodistritoDTO;
 import com.espaciosdeportivos.dto.ZonaDTO;
 
 
@@ -13,9 +14,10 @@ import com.espaciosdeportivos.repository.ZonaRepository;
 import com.espaciosdeportivos.service.IZonaService;
 import com.espaciosdeportivos.validation.ZonaValidator;
 
-import org.springframework.beans.factory.annotation.Autowired; 
+//import org.springframework.beans.factory.annotation.Autowired; 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import lombok.RequiredArgsConstructor;
 
 import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
@@ -23,23 +25,13 @@ import java.util.stream.Collectors;
 
 
 @Service
+@RequiredArgsConstructor
+@Transactional
 public class ZonaServiceImpl implements IZonaService {
     
     private final ZonaRepository zonaRepository;
     private final ZonaValidator zonaValidator;
-
     private final MacrodistritoRepository macrodistritoRepository;
-
-    @Autowired
-    public ZonaServiceImpl(
-        ZonaRepository zonaRepository, 
-        ZonaValidator zonaValidator, 
-        MacrodistritoRepository macrodistritoRepository
-    ) {
-        this.zonaRepository = zonaRepository;
-        this.zonaValidator = zonaValidator;
-        this.macrodistritoRepository = macrodistritoRepository;
-    }
 
     @Override
     @Transactional(readOnly = true)
@@ -57,8 +49,8 @@ public class ZonaServiceImpl implements IZonaService {
         return zonaRepository.findAll()
                 .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
-                //.toList();
+                //.collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -99,6 +91,7 @@ public class ZonaServiceImpl implements IZonaService {
         return convertToDTO(guardada);
     }
 
+    
     @Override
     @Transactional
     public ZonaDTO actualizarZona(Long idZona, ZonaDTO zonaDTO) {
@@ -166,6 +159,7 @@ public class ZonaServiceImpl implements IZonaService {
                 .descripcion(zona.getDescripcion())
                 .estado(zona.getEstado())
                 .idMacrodistrito(zona.getMacrodistrito() != null ? zona.getMacrodistrito().getIdMacrodistrito() : null)
+                .macrodistrito(convertMacrodistritoToDTO(zona.getMacrodistrito()))
                 .build();
     }
 
@@ -180,6 +174,15 @@ public class ZonaServiceImpl implements IZonaService {
             .estado(dto.getEstado() == null ? Boolean.TRUE : dto.getEstado())
             .macrodistrito(macrodistrito)
             .build();
+    }
+    private MacrodistritoDTO convertMacrodistritoToDTO(Macrodistrito z) {
+        if (z == null) return null;
+        return MacrodistritoDTO.builder()
+                .idMacrodistrito(z.getIdMacrodistrito())
+                .nombre(z.getNombre())
+                .descripcion(z.getDescripcion())
+                .estado(z.getEstado())
+                .build();
     }
 
 }
